--- a/.github/workflows/compiler_publish_docker_images.yml
+++ b/.github/workflows/compiler_publish_docker_images.yml
@@ -50,10 +50,10 @@ jobs:
           echo "Type: ${{ inputs.instance_type }}"
           echo "Request ID: ${{ inputs.request_id }}"
 
-      - name: Set up GitHub environment
-        run: |
-          echo "SSH_AUTH_SOCK=/ssh.socket" >> "${GITHUB_ENV}"
-          echo "SSH_AUTH_SOCK_DIR=$(dirname $SSH_AUTH_SOCK)" >> "${GITHUB_ENV}"
+#      - name: Set up GitHub environment
+#        run: |
+#          echo "SSH_AUTH_SOCK=$SSH_AUTH_SOCK" >> "${GITHUB_ENV}"
+#          echo "SSH_AUTH_SOCK_DIR=$(dirname $SSH_AUTH_SOCK)" >> "${GITHUB_ENV}"
 
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
         with:
@@ -67,7 +67,6 @@ jobs:
       - name: Build Image
         run: |
           DOCKER_BUILDKIT=1 docker build --no-cache \
-            --ssh default \
             --label "commit-sha=${{ github.sha }}" -t ${{ matrix.image }} -f ${{ matrix.dockerfile }} .
 
       - name: Tag and Publish Image
